# SPI-AC483-Dev

./: .gitignore  README.md  configure.ac
src/: Makefile.am  io.c  private_io.c  private_io.h  spi_ac483.h
tests/: Makefile.am  check_io.c  check_io.h
